ros2-ws/log/build_2023-06-01_14-52-02/monitoring_station_tfm/stderr.log
  File "/home/francisco/ros2-ws/install/monitoring_station_tfm/lib/python3.8/site-packages/monitoring_station_tfm/SendPKG.py", line 85
    # return send_pkg
                    ^
SyntaxError: unexpected EOF while parsing

